Small improvement on Flask microapp

--- a/webgloss/templates/home.html
+++ b/webgloss/templates/home.html
@@ -3,7 +3,7 @@
 {% set active_page = 'home' %}
 {% block content %}
 <p>
-    <em>webgloss</em> allows you to extract structural information from glosses.
+    <em>webgloss</em> allows you to extract grammatical information from glosses.
 </p>
 <form method="post" class="pure-form pure-form-stacked">
     <fieldset>
