--- a/webgloss/templates/results.html
+++ b/webgloss/templates/results.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 {% block title %}Results{% endblock %}
 {% block header %}Results{% endblock %}
 {% set active_page = 'results' %}
